--- a/lib/style/index.css
+++ b/lib/style/index.css
@@ -104,6 +104,7 @@
 
 .do-TreeSelect .ReactVirtualized__List {
     outline: none;
+    overflow: auto !important;
 }
 
 .do-TreeSelect .ReactVirtualized__Grid__innerScrollContainer {
