--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,8 +1,9 @@
 .do-TreeSelect {
     margin: auto;
-    margin-top: 20px;
     border: 1px solid #d9d9d9;
     outline: none;
+    line-height: normal;
+    box-sizing: border-box;
 }
 .do-TreeSelectList {
     box-sizing: border-box;
@@ -92,6 +93,7 @@
     -webkit-transform: translate(0, -40%) rotate(45deg);
     transform: translate(0, -40%) rotate(45deg);
     transition: transform 0.2s ease;
+    box-sizing: border-box;
 }
 
 .do-expandIcon .do-expand:before {
@@ -105,6 +107,10 @@
 .do-TreeSelect .ReactVirtualized__List {
     outline: none;
     overflow: auto !important;
+}
+
+.ReactVirtualized__List {
+    padding-top: 5px;
 }
 
 .do-TreeSelect .ReactVirtualized__Grid__innerScrollContainer {
@@ -129,8 +135,9 @@
     width: 14px;
     height: 14px;
 }
-.do-checkbox .disabled {
-    background-color: #f5f5f5;
+.do-TreeNode .do-checkbox .disabled {
+    background-color: #b8b8b8;
+    border-color: #b8b8b8;
 }
 .do-checkbox-inner {
     position: relative;
@@ -144,16 +151,17 @@
     background-color: #fff;
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
+    box-sizing: border-box;
 }
 .do-checkbox-inner:after {
     -webkit-transform: rotate(45deg) scale(0);
     -ms-transform: rotate(45deg) scale(0);
     transform: rotate(45deg) scale(0);
     position: absolute;
-    left: 4px;
+    left: 3px;
     top: 1px;
     display: table;
-    width: 3px;
+    width: 4px;
     height: 7px;
     border: 2px solid #fff;
     border-top: 0;
@@ -163,6 +171,7 @@
         opacity 0.1s;
     transition: all 0.1s cubic-bezier(0.71, -0.46, 0.88, 0.6), opacity 0.1s;
     opacity: 0;
+    box-sizing: border-box;
 }
 .do-checkbox-checked .do-checkbox-inner {
     background-color: #1890ff;
@@ -187,6 +196,7 @@
     -webkit-transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
     transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
     opacity: 1;
+    box-sizing: border-box;
 }
 
 .do-checkbox-halfChecked .do-checkbox-inner:after {
@@ -206,9 +216,10 @@
     transform: scale(1);
     position: absolute;
     left: 2px;
-    top: 5px;
+    top: 4px;
     width: 6px;
     height: 0px;
+    box-sizing: border-box;
 }
 
 /* custom */
